--- a/contacts.html
+++ b/contacts.html
@@ -24,7 +24,6 @@
         <div class="burger-line"></div>
         <div class="burger-line"></div>
       </div>
-
       <nav class="nav">
         <ul class="nav-list-header">
           <li class="nav-item"><a href="./price.html">Цены</a></li>
@@ -54,12 +53,14 @@
               <li><a href="">Чіп тюнінг</a></li>
             </ul>
           </li>
-
-          <li class="nav-item"><a href="">Почему мы</a></li>
           <li class="nav-item">
-            <a href="">Подбор запчастей</a>
+            <a href="./parts.html">Подбор запчастей</a>
           </li>
-          <li class="nav-item"><a href="">Фотогаллерея</a></li>
+          <li class="nav-item"><a href="./GBO.html">Установка ГБО</a></li>
+
+          <li class="nav-item">
+            <a href="./foto-gallery.html">Фотогаллерея</a>
+          </li>
           <li class="nav-item">
             <a href="./contacts.html">Контакты</a>
           </li>
@@ -200,12 +201,12 @@
               <div class="number-div">
                 <h3>Связь с нами:</h3>
                 <div>
-                  <a href="tel:+380112223344" class="phone-link"
+                  <a href="tel:+380112223344" class="number-link"
                     >+38 (077) 777−77−77</a
                   ><span class="phone-description">Офис</span>
                 </div>
                 <div>
-                  <a href="tel:+380112223344" class="phone-link"
+                  <a href="tel:+380112223344" class="number-link"
                     >+38 (077) 777−77−77</a
                   >
                   <span class="phone-description">Офис</span>
@@ -213,7 +214,7 @@
 
                 <h3>Директор</h3>
                 <div>
-                  <a href="tel:+380502233959" class="phone-link"
+                  <a href="tel:+380502233959" class="number-link"
                     >+38 (050) 223−39−59</a
                   >
                   <span class="phone-description">Павел</span>
@@ -225,12 +226,14 @@
                   ><img
                     src="./src/img/svg/icon_new - white +purple bg.svg"
                     alt="viber-icon"
+                    class="viber-img"
                   />Наш Viber</a
                 >
                 <a href="https://t.me/RofLJeKee" class="telegram-button"
                   ><img
                     src="./src/img/svg/icons-telegram.svg"
                     alt="telegram-icon"
+                    class="telegram-img"
                   />Наш Telegram</a
                 >
               </div>
