--- a/parts.html
+++ b/parts.html
@@ -15,7 +15,6 @@
     <title>АС КАСКАД</title>
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/js/main.js" />
-    <link rel="stylesheet" href="./src/js/1-gallery.js" />
     <link rel="stylesheet" href="./src/js/language.js" />
   </head>
   <header id="header" class="header">
@@ -25,7 +24,6 @@
         <div class="burger-line"></div>
         <div class="burger-line"></div>
       </div>
-
       <nav class="nav">
         <ul class="nav-list-header">
           <li class="nav-item"><a href="./price.html">Цены</a></li>
@@ -70,7 +68,7 @@
       </nav>
       <a href="./index.html"
         ><svg
-          width="140"
+          width="200"
           height="80"
           viewBox="0 0 200 120"
           fill="none"
@@ -107,274 +105,99 @@
   <body>
     <main>
       <div class="container">
-        <section class="hero">
+        <section class="hero-parts">
           <div class="hero-content">
-            <h1 class="hero-title">РЕМОНТ И ОБСЛУЖИВАНИЕ АВТО</h1>
-            <div class="hero-content-container">
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>лучшее соотношение цена/качество</p>
-              </div>
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>гарантии на все виды работ</p>
-              </div>
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>оригинальные запчасти</p>
-              </div>
-            </div>
+            <h1 class="hero-title">МАГАЗИН АВТОЗАПЧАСТЕЙ НА АС "КАСКАД"</h1>
             <button
               type="button"
               onclick="window.location.href='#callbackForm'"
               class="details-hero-btn"
             >
-              ЗАПИСАТЬСЯ
+              ЗАКАЗАТЬ ЗАПЧАСТЬ
             </button>
             <p class="discount">
-              Скидка 50% на первую диагностику по промокоду "АС КАСКАД"
+              Скидка 50% на первый подбор запчастей по промокоду "АС КАСКАД"
             </p>
           </div>
         </section>
-        <section class="services-section">
-          <div class="services-top">
-            <div class="services-top-content">
-              <h1 class="services-title">Услуги и цены</h1>
-              <p class="services-subtitle">
-                Лучшее соотношение цена - качество в вашем городе!
-              </p>
-            </div>
-            <div class="carousel-nav">
-              <button class="carousel-btn" id="prevBtn">
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M20 14H8M14 8L8 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-              </button>
-              <button class="carousel-btn" id="nextBtn">
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-              </button>
+        <section class="parts-section">
+          <div class="benefits-content">
+            <p>
+              Для многих автовладельцев поиск нужных запчастей превращается в
+              настоящий квест. Особенно когда машина уже стоит в сервисе
+              разобранная, а времени на беготню по магазинам совсем нет. Хуже
+              всего, когда после долгих поисков купленная деталь оказывается
+              неподходящей. В автосервисе "Каскад" мы прекрасно понимаем эти
+              сложности и сделали все, чтобы ремонт для вас был максимально
+              комфортным.
+            </p>
+            <p>
+              Автосервис "Каскад" в Павлограде уже более 20 лет помогает
+              автовладельцам решать любые проблемы с их автомобилями. Мы
+              предлагаем полный комплекс услуг – от компьютерной диагностики до
+              капитального ремонта двигателя и ходовой части. Наш сервис
+              работает без выходных, потому что мы понимаем: поломка может
+              случиться в любой момент.
+            </p>
+            <p>
+              Одно из наших ключевых преимуществ – подбор качественных запчастей
+              именно на Ваш автомобиль. Это значит, что вам не придется тратить
+              время на их поиски – все необходимое для ремонта мы берем на себя.
+              Мы тщательно проверяем всех поставщиков и гарантируем, что
+              используем только надежные детали. Наши мастера – настоящие
+              профессионалы, которые знают свое дело и всегда готовы дать
+              честную рекомендацию по ремонту. В "Каскаде" вы получаете не
+              просто услуги автосервиса, а комплексное решение всех проблем с
+              вашим автомобилем в одном месте.
+            </p>
+          </div>
+          <div class="carousel-container">
+            <div class="carousel">
+              <img src="./src/img/parts1.jpg" alt="Запчасти" class="active" />
+              <img src="./src/img/parts2.jpg" alt="Запчасти" />
+              <img
+                src="./src/img/parts3.jpg"
+                alt="Запчасти"
+                style="display: none"
+              />
+              <!-- Третье изображение скрыто -->
             </div>
           </div>
-          <div class="services-carousel">
-            <div class="services-container" id="servicesContainer">
-              <div class="service-card">
-                <h3>РЕМОНТ И ТЕХ ОБСЛУЖИВАНИЕ</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>ПРОДАЖА АВТОЗАПЧАСТЕЙ</h3>
-                <p>
-                  В наличии подвески, тормозные системы, системы зажигания,
-                  фильтры, системы управления, светотехника, трансмиссии,
-                  автоэлектроника, шины и диски
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>ЗАМЕНА ЖИДКОСТЕЙ</h3>
-                <p>
-                  Замена моторного масла, тормозной жидкости, антифриза,
-                  омывателя лобового стекла, масла коробки передач, хладагента
-                  кондиционера, и остальных технических жидкостей в автомобиле
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>ОСМОТР АВТО ПЕРЕД ПОКУПКОЙ</h3>
-                <p>
-                  Диагностика авто перед покупкой, проверка двигателя, коробки
-                  передач, электроники с помощью тест-драйва
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>ДИАГНОСТИКА ДВИГАТЕЛЯ</h3>
-                <p>
-                  Компьютерная диагностика двигателя, проверка состояния
-                  цилиндропоршневой группы, системы зажигания и впрыска
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>РЕМОНТ ТРАНСМИССИИ</h3>
-                <p>
-                  Диагностика и ремонт механических и автоматических коробок
-                  передач, редукторов, раздаточных коробок
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>РЕМОНТ ХОДОВОЙ</h3>
-                <p>
-                  Диагностика и ремонт подвески, замена амортизаторов, шаровых
-                  опор, рычагов, сайлентблоков
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>АВТОЭЛЕКТРИКА</h3>
-                <p>
-                  Диагностика и ремонт электрооборудования автомобиля, проводки,
-                  блоков управления, датчиков
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-
-              <div class="service-card">
-                <h3>КУЗОВНОЙ РЕМОНТ</h3>
-                <p>
-                  Ремонт кузовных элементов, покраска, антикоррозийная
-                  обработка, рихтовка без покраски
-                </p>
-                <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="benefits-section">
-          <h2 class="benefits-title">
-            Почему <span class="span-benefits-title"> выбирают нас</span>
-          </h2>
-          <div class="benefits-containers">
-            <div class="benefits-container">
-              <div class="benefits-top">
-                <p class="benefits-number">1</p>
-                <p class="benefits-top-text">
-                  Гарантия на выполненные работы до 24 мес
-                </p>
-              </div>
-              <img
-                class="benefits-img"
-                src="./src/img/kaskad/hero1.jpg"
-                alt=""
-              />
-              <p class="benefits-bot-text">Оснащен современным оборудованием</p>
-            </div>
-            <div class="benefits-container">
-              <div class="benefits-top">
-                <p class="benefits-number">2</p>
-                <p class="benefits-top-text">
-                  Профессиональное диагностическое оборудование
-                </p>
-              </div>
-              <img
-                class="benefits-img"
-                src="./src/img/kaskad/hero1.jpg"
-                alt=""
-              />
-              <p class="benefits-bot-text">
-                Качественные, рекомендованные производителем запчасти
-              </p>
-            </div>
-            <div class="benefits-container">
-              <div class="benefits-top">
-                <p class="benefits-number">3</p>
-                <p class="benefits-top-text">
-                  Скидки подписчикам и по промокоду
-                </p>
-              </div>
-              <img
-                class="benefits-img"
-                src="./src/img/kaskad/hero1.jpg"
-                alt=""
-              />
-              <p class="benefits-bot-text">
-                Квалифицированные специалисты с опытом
-              </p>
-            </div>
+          <div class="Our-Benefits">
+            <h2>Наши преимущества</h2>
+            <p>
+              Приобретая автозапчасти в нашем автосервисе, вы получаете ряд
+              важных преимуществ:
+            </p>
+            <ul class="benefits-list">
+              <li class="benefits-item">
+                <span class="bene-span">Официальная гарантия</span> на все
+                детали от производителей*.
+              </li>
+              <li class="benefits-item">
+                <span class="bene-span">Экономия времени</span> – вам не нужно
+                искать запчасти самостоятельно.
+              </li>
+              <li class="benefits-item">
+                <span class="bene-span">Гарантия совместимости</span> – мы
+                подбираем детали и расходники строго по спецификациям
+                автопроизводителей.
+              </li>
+              <li class="benefits-item">
+                <span class="bene-span">Профессиональные консультации</span> –
+                наши специалисты помогут выбрать оптимальное решение,
+                основываясь на многолетнем опыте ремонта.
+              </li>
+              <li class="benefits-item">
+                <span class="bene-span">Комплексный подход</span> – диагностика,
+                подбор запчастей и ремонт выполняются в одном месте, что
+                гарантирует качество и нашу ответственность за результат.
+              </li>
+            </ul>
+            <p>
+              *Сроки и условия гарантии могут отличаться для разных категорий
+              товаров. Подробности уточняйте у наших менеджеров.
+            </p>
           </div>
         </section>
         <section class="callback-section">
@@ -649,7 +472,6 @@
           </div>
         </section>
       </div>
-      <script type="module" src="./js/1-gallery.js" defer></script>
       <script type="module" src="./src/js/main.js"></script>
       <script type="module" src="./src/js/language.js"></script>
     </main>
