--- a/service-catalog.html
+++ b/service-catalog.html
@@ -24,7 +24,6 @@
         <div class="burger-line"></div>
         <div class="burger-line"></div>
       </div>
-
       <nav class="nav">
         <ul class="nav-list-header">
           <li class="nav-item"><a href="./price.html">Цены</a></li>
@@ -54,12 +53,14 @@
               <li><a href="">Чіп тюнінг</a></li>
             </ul>
           </li>
-
-          <li class="nav-item"><a href="">Почему мы</a></li>
           <li class="nav-item">
-            <a href="">Специалисты</a>
+            <a href="./parts.html">Подбор запчастей</a>
           </li>
-          <li class="nav-item"><a href="">Фотогаллерея</a></li>
+          <li class="nav-item"><a href="./GBO.html">Установка ГБО</a></li>
+
+          <li class="nav-item">
+            <a href="./foto-gallery.html">Фотогаллерея</a>
+          </li>
           <li class="nav-item">
             <a href="./contacts.html">Контакты</a>
           </li>
@@ -455,7 +456,7 @@
   <footer id="map-section">
     <div class="container">
       <div class="footer-container">
-        <div class="top-map-div">
+        <div class="top-footer">
           <div class="title-map">
             <h2 class="map-title">Мы на картах</h2>
             <p class="map-content">
@@ -480,7 +481,7 @@
           <a href="./index.html"
             ><svg
               width="200"
-              height="120"
+              height="110"
               viewBox="0 0 200 120"
               fill="none"
               class="logo-footer"
@@ -533,7 +534,7 @@
             >
           </a>
         </div>
-        <div class="bot-map-div">
+        <div class="bot-footer">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.1671680623163!2d35.83637660000001!3d48.530028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40deb744fd3bfc69%3A0x36392c7691b6bb0d!2z0KHQotCeINCa0LDRgdC60LDQtA!5e0!3m2!1sru!2sua!4v1748441138956!5m2!1sru!2sua"
             width="400"
@@ -544,37 +545,34 @@
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
-          <div class="map-work-div">
-            <h4 class="map-work-title">Режим работы:</h4>
-            <p class="map-work-up">ПН-ПТ с 9:00 до 18:00,</p>
-            <p class="map-work-down">Сб и Вс - выходные дни</p>
-            <p class="map-work-number">+380502233959</p>
-            <div class="social-div">
-              <a href="viber://chat?number=+380502233959" class="viber-button"
-                ><img
-                  src="./src/img/svg/icon_new - white +purple bg.svg"
-                  alt="viber-icon"
-                />Наш Viber</a
-              >
-              <a href="https://t.me/RofLJeKee" class="telegram-button"
-                ><img
-                  src="./src/img/svg/icons-telegram.svg"
-                  alt="telegram-icon"
-                />Наш Telegram</a
-              >
+          <div>
+            <div class="work-footer-div">
+              <h3>Работаем без выходных:</h3>
+              <p>Понедельник - Воскресенье</p>
+              <p>C 09:00 до 18:00</p>
+            </div>
+            <div class="number-footer-div">
+              <h3>Связь с нами:</h3>
+              <div>
+                <a href="tel:+380112223344" class="number-link"
+                  >+38 (077) 777−77−77</a
+                ><span>Офис</span>
+              </div>
+              <div>
+                <a href="tel:+380112223344" class="number-link"
+                  >+38 (077) 777−77−77</a
+                >
+                <span>Офис</span>
+              </div>
+              <h3>Директор</h3>
+              <div>
+                <a href="tel:+380502233959" class="number-link"
+                  >+38 (050) 223−39−59</a
+                >
+                <span>Павел</span>
+              </div>
             </div>
           </div>
-          <nav class="map-navi">
-            <p>Меню</p>
-            <ul class="nav-list">
-              <il>Услуги</il>
-              <il>Почему мы</il>
-              <il>Специалисты</il>
-              <il>Процесс работы</il>
-              <il>Отзывы</il>
-              <il>Контакты</il>
-            </ul>
-          </nav>
         </div>
       </div>
     </div>
