--- a/GBO.html
+++ b/GBO.html
@@ -26,7 +26,15 @@
       </div>
       <nav class="nav">
         <ul class="nav-list-header">
-          <li class="nav-item"><a href="./price.html">Цены</a></li>
+          <li class="nav-item"><a href="./index.html">Главная</a></li>
+          <li class="nav-item">
+            <a href="./foto-gallery.html">Фотогаллерея</a>
+          </li>
+          <li class="nav-item">
+            <a href="./parts.html">Подбор запчастей</a>
+          </li>
+          <li class="nav-item"><a href="./GBO.html">Установка ГБО</a></li>
+
           <li class="nav-item dropdown">
             <a href="./service-catalog.html">Услуги</a>
             <ul class="dropdown-content">
@@ -54,21 +62,14 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="./parts.html">Подбор запчастей</a>
-          </li>
-          <li class="nav-item"><a href="./GBO.html">Установка ГБО</a></li>
-
-          <li class="nav-item">
-            <a href="./foto-gallery.html">Фотогаллерея</a>
-          </li>
-          <li class="nav-item">
             <a href="./contacts.html">Контакты</a>
           </li>
+          <li class="nav-item"><a href="./price.html">Цены</a></li>
         </ul>
       </nav>
       <a href="./index.html"
         ><svg
-          width="200"
+          width="140"
           height="80"
           viewBox="0 0 200 120"
           fill="none"
@@ -734,7 +735,7 @@
         </div>
         <div class="bot-footer">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.1671680623163!2d35.83637660000001!3d48.530028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40deb744fd3bfc69%3A0x36392c7691b6bb0d!2z0KHQotCeINCa0LDRgdC60LDQtA!5e0!3m2!1sru!2sua!4v1748441138956!5m2!1sru!2sua"
+            src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d262.7286342547718!2d35.83691716651164!3d48.530077092994496!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sua!4v1749559352690!5m2!1sru!2sua"
             width="400"
             height="300"
             style="border-radius: 10px"
@@ -752,13 +753,13 @@
             <div class="number-footer-div">
               <h3>Связь с нами:</h3>
               <div>
-                <a href="tel:+380112223344" class="number-link"
-                  >+38 (077) 777−77−77</a
-                ><span>Офис</span>
+                <a href="tel:+380668375666" class="number-link"
+                  >+38 (066) 837−56−66</a
+                ><span> Офис</span>
               </div>
               <div>
-                <a href="tel:+380112223344" class="number-link"
-                  >+38 (077) 777−77−77</a
+                <a href="tel:+380962110210" class="number-link"
+                  >+38 (096) 211−02−10</a
                 >
                 <span>Офис</span>
               </div>
