--- a/contacts.html
+++ b/contacts.html
@@ -26,7 +26,15 @@
       </div>
       <nav class="nav">
         <ul class="nav-list-header">
-          <li class="nav-item"><a href="./price.html">Цены</a></li>
+          <li class="nav-item"><a href="./index.html">Главная</a></li>
+          <li class="nav-item">
+            <a href="./foto-gallery.html">Фотогаллерея</a>
+          </li>
+          <li class="nav-item">
+            <a href="./parts.html">Подбор запчастей</a>
+          </li>
+          <li class="nav-item"><a href="./GBO.html">Установка ГБО</a></li>
+
           <li class="nav-item dropdown">
             <a href="./service-catalog.html">Услуги</a>
             <ul class="dropdown-content">
@@ -54,21 +62,14 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="./parts.html">Подбор запчастей</a>
-          </li>
-          <li class="nav-item"><a href="./GBO.html">Установка ГБО</a></li>
-
-          <li class="nav-item">
-            <a href="./foto-gallery.html">Фотогаллерея</a>
-          </li>
-          <li class="nav-item">
             <a href="./contacts.html">Контакты</a>
           </li>
+          <li class="nav-item"><a href="./price.html">Цены</a></li>
         </ul>
       </nav>
       <a href="./index.html"
         ><svg
-          width="200"
+          width="140"
           height="80"
           viewBox="0 0 200 120"
           fill="none"
@@ -222,7 +223,7 @@
               </div>
               <div class="soc-div">
                 <h3>Пишите нам:</h3>
-                <a href="viber://chat?number=+380502233959" class="viber-button"
+                <a href="viber://chat?number=+380668375666" class="viber-button"
                   ><img
                     src="./src/img/svg/icon_new - white +purple bg.svg"
                     alt="viber-icon"
@@ -245,24 +246,4 @@
       <script type="module" src="./src/js/language.js"></script>
     </main>
   </body>
-  <footer class="contacts-footer">
-    <a href="#header" class="to-home" id="back-to-top">
-      <span class="icon">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="16"
-          height="16"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="3"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path d="M18 15l-6-6-6 6" />
-        </svg>
-      </span>
-      <span class="text" data-translate="tr-footer-up">Піднятися в гору</span>
-    </a>
-  </footer>
 </html>
