--- a/price.html
+++ b/price.html
@@ -26,7 +26,15 @@
       </div>
       <nav class="nav">
         <ul class="nav-list-header">
-          <li class="nav-item"><a href="./price.html">Цены</a></li>
+          <li class="nav-item"><a href="./index.html">Главная</a></li>
+          <li class="nav-item">
+            <a href="./foto-gallery.html">Фотогаллерея</a>
+          </li>
+          <li class="nav-item">
+            <a href="./parts.html">Подбор запчастей</a>
+          </li>
+          <li class="nav-item"><a href="./GBO.html">Установка ГБО</a></li>
+
           <li class="nav-item dropdown">
             <a href="./service-catalog.html">Услуги</a>
             <ul class="dropdown-content">
@@ -54,21 +62,14 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="./parts.html">Подбор запчастей</a>
-          </li>
-          <li class="nav-item"><a href="./GBO.html">Установка ГБО</a></li>
-
-          <li class="nav-item">
-            <a href="./foto-gallery.html">Фотогаллерея</a>
-          </li>
-          <li class="nav-item">
             <a href="./contacts.html">Контакты</a>
           </li>
+          <li class="nav-item"><a href="./price.html">Цены</a></li>
         </ul>
       </nav>
       <a href="./index.html"
         ><svg
-          width="200"
+          width="140"
           height="80"
           viewBox="0 0 200 120"
           fill="none"
@@ -123,19 +124,19 @@
         <section class="price-section">
           <div class="price-content-container">
             <p class="price-content">
-              Предлагаем вашему вниманию прайс-лист с ценами на услуги СТО в
-              Павлограде — АС КАСКАД. Наш сервис специализируется на полном
-              цикле ремонта Вашего авто. Это не полный список, но мы постарались
-              собрать самые востребованные виды работ, отталкиваясь из нашего
-              опыта и запросов клиентов.
+              Представляем Вашему вниманию актуальный прайс-лист автосервиса «АС
+              КАСКАД» в Павлограде. Мы специализируемся на полном спектре услуг
+              по ремонту и обслуживанию автомобилей всех марок. В этом перечне
+              собраны наиболее популярные виды работ, отобранные на основе
+              нашего многолетнего опыта и реальных запросов клиентов.
             </p>
             <p class="price-content">
-              На данной странице Вы можете найти большинство вид услуг по
-              диагностике, техническому обслуживанию и ремонту автомобилей. Если
-              же Вы не находите в прайс-листе нужной вам услуги, Вы можете
-              связаться с нами по телефонам +38 (068) 777 77 77; +38 (095) 777
-              77 77, наши менеджеры ответят на все вопросы касающиеся вашего
-              авто.
+              Здесь Вы найдёте основные услуги по диагностике, техническому
+              обслуживанию и ремонту автомобильных узлов и агрегатов. Если
+              нужной Вам услуги нет в списке – просто позвоните нам по телефонам
+              +38 (066) 837 56 66 или +38 (096) 211 02 10. Наши специалисты
+              всегда готовы проконсультировать и предложить оптимальное решение
+              для Вашего автомобиля.
             </p>
           </div>
 
@@ -187,7 +188,7 @@
               </tr>
               <tr>
                 <td>Діагностика ходової частини</td>
-                <td class="price">350 грн</td>
+                <td class="price">400 грн</td>
               </tr>
               <tr class="included-service">
                 <td>Рульове управління</td>
@@ -224,7 +225,7 @@
               <tr>
                 <td>Перевірка наповнення циліндрів мотор-тестером</td>
                 <td class="price">
-                  650 грн (4 циліндра)<br />800 грн (6-8 циліндрів)
+                  800 грн (4 циліндра)<br />1000 грн (6-8 циліндрів)
                 </td>
               </tr>
               <tr>
@@ -271,12 +272,12 @@
               <tr>
                 <td>Заміна масла у двигуні та фільтра масляного</td>
                 <td class="price">
-                  350 грн. (при покупці масла у нас), 500 грн. (якщо своє)
+                  400 грн. (при покупці масла у нас), 500 грн. (якщо своє)
                 </td>
               </tr>
               <tr>
                 <td>Зняття-встановлення захисту двигуна</td>
-                <td class="price">від 150 грн.</td>
+                <td class="price">від 400 грн.</td>
               </tr>
               <tr>
                 <td>Заміна масла у механічній КПП</td>
@@ -847,7 +848,7 @@
                   Вимір компресії бензинового двигуна (1 циліндр) без зняття
                   колектора
                 </td>
-                <td class="price">250 грн.</td>
+                <td class="price">300 грн.</td>
               </tr>
               <tr>
                 <td>
@@ -858,11 +859,11 @@
               </tr>
               <tr>
                 <td>Регулювання клапанів (8 клапанів), гвинти</td>
-                <td class="price">від 2000 грн.</td>
+                <td class="price">від 1000 грн.</td>
               </tr>
               <tr>
                 <td>Регулювання клапанів (8 клапанів), шайби або товкачі</td>
-                <td class="price">від 4500 грн.</td>
+                <td class="price">від 2000 грн.</td>
               </tr>
               <tr>
                 <td>Регулювання клапанів (16 клапанів), гвинти</td>
@@ -1020,26 +1021,27 @@
             <tbody>
               <tr>
                 <td>Заміна ременя ГУР</td>
-                <td class="price">від 550 грн.</td>
+                <td class="price">від 400 грн.</td>
               </tr>
               <tr>
                 <td>Заміна ременя генератора</td>
-                <td class="price">від 550 грн.</td>
+                <td class="price">від 400 грн.</td>
               </tr>
               <tr>
                 <td>Заміна ременя кондиціонера</td>
-                <td class="price">від 550 грн.</td>
+                <td class="price">від 400 грн.</td>
               </tr>
               <tr>
                 <td>Заміна ролика натяжного ременя поліклінового</td>
-                <td class="price">від 850 грн.</td>
+                <td class="price">від 400 грн.</td>
               </tr>
               <tr>
                 <td>Заміна ролика обвідного ременя поліклінового</td>
-                <td class="price">від 600 грн.</td>
+                <td class="price">від 400 грн.</td>
               </tr>
             </tbody>
           </table>
+
           <h2>Система охолодження</h2>
           <table>
             <thead>
@@ -1109,7 +1111,7 @@
               <tr>
                 <td>Заправка системи кондиціонування (фреон та масло)</td>
                 <td class="price">
-                  1000 грн + витратні матеріали (масло та фреон), на порожній
+                  500 грн + витратні матеріали (масло та фреон), на порожній
                   системі в середньому 1800 грн.
                 </td>
               </tr>
@@ -1586,7 +1588,7 @@
         </div>
         <div class="bot-footer">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.1671680623163!2d35.83637660000001!3d48.530028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40deb744fd3bfc69%3A0x36392c7691b6bb0d!2z0KHQotCeINCa0LDRgdC60LDQtA!5e0!3m2!1sru!2sua!4v1748441138956!5m2!1sru!2sua"
+            src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d262.7286342547718!2d35.83691716651164!3d48.530077092994496!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sua!4v1749559352690!5m2!1sru!2sua"
             width="400"
             height="300"
             style="border-radius: 10px"
@@ -1604,13 +1606,13 @@
             <div class="number-footer-div">
               <h3>Связь с нами:</h3>
               <div>
-                <a href="tel:+380112223344" class="number-link"
-                  >+38 (077) 777−77−77</a
-                ><span>Офис</span>
+                <a href="tel:+380668375666" class="number-link"
+                  >+38 (066) 837−56−66</a
+                ><span> Офис</span>
               </div>
               <div>
-                <a href="tel:+380112223344" class="number-link"
-                  >+38 (077) 777−77−77</a
+                <a href="tel:+380962110210" class="number-link"
+                  >+38 (096) 211−02−10</a
                 >
                 <span>Офис</span>
               </div>
