--- a/index.html
+++ b/index.html
@@ -175,12 +175,52 @@
             </p>
           </div>
         </section>
+        <section class="main-content-section">
+          <div class="main-content-div">
+            <div class="main-content">
+              <h2>
+                Автосервис «Каскад» в Павлограде – надежный партнер для Вашего
+                автомобиля уже более 20 лет
+              </h2>
+              <p>
+                Когда Вашему автомобилю требуется внимание, важно доверить его
+                тем, кто знает свое дело. Автосервис «Каскад» работает в
+                Павлограде с 2005 года, и за это время мы заслужили репутацию
+                надежного и профессионального сервиса, способного решить любую
+                задачу – от простого технического обслуживания до сложного
+                ремонта.
+              </p>
+              <p>
+                Наш опыт – это тысячи отремонтированных автомобилей, довольные
+                клиенты и уверенность в том, что мы справимся даже с самыми
+                неочевидными неисправностями. Мы не просто меняем детали – мы
+                находим причину проблемы и устраняем ее, чтобы Ваш автомобиль
+                служил вам долго и безотказно. В нашем распоряжении современное
+                оборудование, качественные запчасти и команда мастеров, которые
+                действительно разбираются в своем деле.
+              </p>
+              <p>
+                Здесь Вам не предложат ненужных услуг – только честную
+                диагностику и прозрачные цены. Мы понимаем, как важно для вас
+                быть уверенным в своем автомобиле, и делаем все, чтобы после
+                визита в «Каскад» Вы могли спокойно отправляться в дорогу.
+              </p>
+              <p>
+                Приезжайте и убедитесь сами – Ваш автомобиль заслуживает лучшего
+                обслуживания!
+              </p>
+            </div>
+            <div>
+              <img class="img-content" src="./src/img/kaskad/i25.jpg" alt="" />
+            </div>
+          </div>
+        </section>
         <section class="services-section">
           <div class="services-top">
             <div class="services-top-content">
               <h1 class="services-title">Услуги и цены</h1>
               <p class="services-subtitle">
-                Лучшее соотношение цена - качество в вашем городе!
+                Лучшее соотношение цена - качество в нашем городе!
               </p>
             </div>
             <div class="carousel-nav">
@@ -228,7 +268,9 @@
                   регламентной замене деталей и/или технических жидкостей
                 </p>
                 <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
+                  <a href="./service-catalog.html#servisnoe" class="details-btn"
+                    >ПОДРОБНЕЕ</a
+                  >
                 </div>
               </div>
 
@@ -240,7 +282,7 @@
                   автоэлектроника, шины и диски
                 </p>
                 <div class="btn-container">
-                  <a href="/repair" class="details-btn">ПОДРОБНЕЕ</a>
+                  <a href="./parts.html" class="details-btn">ПОДРОБНЕЕ</a>
                 </div>
               </div>
 
@@ -357,6 +399,58 @@
               <img class="benefits-img" src="./src/img/bene-3.jpg" alt="" />
               <p class="benefits-bot-text">
                 «Ваше авто не задержится у нас дольше необходимого.»
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="main-content-section">
+          <div class="main-content-div">
+            <div class="main-content">
+              <h2>
+                Автосервис «Каскад» в Павлограде – это профессиональный уход для
+                Вашего автомобиля.
+              </h2>
+              <p>
+                Мы предлагаем комплексный подход к обслуживанию автомобилей: от
+                качественных запчастей и технических жидкостей до
+                профессионального ремонта любой сложности. За 20 лет работы мы
+                сформировали надежную сеть поставщиков, сотрудничая с
+                официальными дистрибьюторами. Это позволяет нам гарантировать
+                качество деталей и предоставлять гарантию на все виды работ.
+                Наши специалисты подберут оптимальные решения по соотношению
+                цены и качества, помогая Вам экономить без ущерба для
+                результата. Подробнее о запчастях Вы можете узнать в
+                соответствующем разделе сайта.
+              </p>
+              <p>
+                Выбирая «Каскад», Вы получаете не просто ремонт, а честный
+                сервис, внимательное отношение и гарантированный результат. Мы
+                работаем с автомобилями так же бережно, как с собственными, и
+                полностью отвечаем за качество наших услуг. В спорных ситуациях
+                мы всегда идем навстречу клиенту. Предлагаем гибкую систему
+                скидок, принимаем как наличный, так и безналичный расчет. Наши
+                специалисты бесплатно проконсультируют Вас по любым вопросам,
+                связанным с обслуживанием и ремонтом, и сделают все, чтобы Вы
+                остались довольны!
+              </p>
+              <h2 class="two-title-content">
+                Комплексный ремонт и обслуживание автомобилей
+              </h2>
+              <p>
+                Каждому автовладельцу рано или поздно приходится сталкиваться с
+                необходимостью ремонта – будь то плановое ТО или серьезное
+                восстановление узлов автомобиля. Это естественно: в процессе
+                эксплуатации все механизмы подвергаются износу. При этом даже
+                машины, которые долго стоят без движения, требуют внимания –
+                детали могут пересыхать, а жидкости терять свои свойства.
+                Регулярно используемым автомобилям профессиональное обслуживание
+                нужно еще чаще – только так можно избежать неожиданных поломок и
+                дорогостоящего ремонта.
+              </p>
+              <p>
+                Автосервис «Каскад» предлагает полный спектр услуг для
+                автомобилей любых марок. Какими бы ни были причины Вашего визита
+                – мы готовы помочь!
               </p>
             </div>
           </div>
